syntax = "proto3";
package euc_backend;


import "area/area.proto";

message AreaReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  optional Area payload = 4;
}

message AreaListDataReply {
  repeated Area area_list = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message AreaListReply {
  int32 status_code = 1;
  string message = 2;
  optional string error_code = 3;
  AreaListDataReply payload = 4;
}
